# Black-Holes-Population-Studies

./: default.json  default1low.pt  default2low.pt  default_loss.npz  default_tloss1low.pt  nf_train.py  pyproject.toml  readme.md
models/: flows.py
notebooks/: BHBHm.pq  DataPreperation.ipynb  Normalizing_flows.ipynb  hyperparam_tuning.ipynb  input_data.ipynb  likelihood_optimisation.py  mock_data.pq  mock_data_with_alpha_dependency.parquet  mock_data_with_complex_mass0.parquet  sampled_BHBHm.pq  sampling.ipynb  test.pq  train.pq  valid.pq
tools/: constants.py  flows.py  model.py  plotting.py  tuning.py
tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tuning/20mins/: blocks_10_hidden_128_A_relu_N_1000.json  blocks_10_hidden_128_A_relu_N_10001low.pt  blocks_10_hidden_128_A_relu_N_10002low.pt  blocks_10_hidden_128_A_relu_N_1000_loss.npz  blocks_10_hidden_128_A_relu_N_1000_tloss1low.pt  blocks_10_hidden_128_A_tanh_N_1000.json  blocks_10_hidden_128_A_tanh_N_10001low.pt  blocks_10_hidden_128_A_tanh_N_10002low.pt  blocks_10_hidden_128_A_tanh_N_1000_loss.npz  blocks_10_hidden_128_A_tanh_N_1000_tloss1low.pt  blocks_10_hidden_200_A_relu_N_1000.json  blocks_10_hidden_200_A_relu_N_1000_loss.npz  blocks_10_hidden_200_A_tanh_N_1000.json  blocks_10_hidden_200_A_tanh_N_1000_loss.npz  blocks_20_hidden_128_A_relu_N_1000.json  blocks_20_hidden_128_A_relu_N_1000_loss.npz  blocks_20_hidden_128_A_tanh_N_1000.json  blocks_20_hidden_128_A_tanh_N_1000_loss.npz  blocks_20_hidden_200_A_relu_N_1000.json  blocks_20_hidden_200_A_relu_N_1000_loss.npz  blocks_20_hidden_200_A_tanh_N_1000.json  (+9 more)
