[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['tools']

[project]
name = 'tools'
description = 'BHs population studies with SEVN'
version = '0.0.1'
requires-python = '< 3.12'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['DPGMM', 'HDPGMM', 'figaro', 'hierarchical', 'inference']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  {name = "Walter Del Pozzo", email = "walter.delpozzo@unipi.it"},
  {name = "Daniele Sanfratello", email = "daniele.sanfratello@studenti.unipi.it"}
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics',
]

dependencies = [
    "numpy > 1.22",
    "scipy",
    "matplotlib != 3.6.3",
    "dill",
    "corner",
    "h5py",
    "tqdm",
    ]
